# TestcaseGen-AI

./: .env.example  .gitignore  Home.py  README.md  app.py  pyproject.toml  pyrightconfig.json  theme.py
.streamlit/: config.toml
agent/: ambiguity.py  case_value_context.py  clarifying_questions.py  contradiction_scan.py  coverage.py  cross_req_dedup.py  execution_profile.py  exhaustiveness.py  formatting.py  graph.py  llm.py  models.py  pipeline_progress.py  prompts.py  rag_display.py  rag_relevance.py  regen.py  state.py  substance.py
docs/: E2E_VERIFICATION.md  VERIFICATION.md
pages/: Bugs.py  Dashboard.py  Demo.py  Generate.py  Home.py  Import.py  Library.py  Settings.py  Traceability.py
sample_data/: sample_bug_reports.csv  sample_requirements.txt  sample_test_cases.csv
scripts/: debug_parse_doc.py
services/: __init__.py  bootstrap.py  chunking.py  constraint_index.py  constraint_parser.py  document_parser.py  embeddings.py  export.py  ingest.py  library_search.py  openai_errors.py  project_ui.py  session_project.py  spec_facts.py  srs_change.py  supabase_auth.py  supabase_repo.py
tests/: test_ambiguity.py  test_analyst.py  test_chunking.py  test_clarifying_questions.py  test_constraint_index.py  test_constraint_parser.py  test_contradiction_scan.py  test_cross_req_dedup.py  test_execution_profile.py  test_generation_constraints.py  test_llm_config.py  test_openai_errors.py  test_oracle_validate.py  test_rag_isolation.py  test_rag_relevance.py  test_regen.py  test_semantic_dedup_scope.py  test_spec_facts.py  test_srs_change.py  test_substance.py  (+4 more)
(+33 files in other folders)
