[project]
name = "testcraft-ai"
version = "0.1.0"
description = "RAG-backed test case generation with LangGraph and Supabase pgvector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "supabase>=2.0.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = false
